syntax = "proto3";

package proto;

message SHA256 {
  fixed32 data1 = 1;
  fixed32 data2 = 2;
  fixed32 data3 = 3;
  fixed32 data4 = 4;
  fixed32 data5 = 5;
  fixed32 data6 = 6;
  fixed32 data7 = 7;
  fixed32 data8 = 8;
}
